Fix spelling mistakes in Polish chatzilla

--- a/pl/extensions/irc/chrome/chatzilla.properties
+++ b/pl/extensions/irc/chrome/chatzilla.properties
@@ -646,7 +646,7 @@ cmd.sslserver.params=<hostname> [<port> [<password>]]
 cmd.sslserver.help=Łączy się z serwerem <nazwa-hosta> i portem numer <port> za pomocą protokołu SSL. Domyślny numer portu to 9999. Hasło użytkownika można określić parametrem <password>. W przypadku, gdy użytkownik jest już połączony z danym serwerem, karta serwera przenoszony jest na pierwszy plan. 
 
 cmd.ssl-exception.params=[<hostname> <port> [<connect>]]
-cmd.ssl-exception.help=Otwiera okno dialogowe w celu dodania wyjątku dla certyfikatu SSL dla <hostname>. Połaczenie do <hostname> zostanie zainicjowane po dodaniu wyjątku, jeśli <connect> zostało ustawione.
+cmd.ssl-exception.help=Otwiera okno dialogowe w celu dodania wyjątku dla certyfikatu SSL dla <hostname>. Połączenie do <hostname> zostanie zainicjowane po dodaniu wyjątku, jeśli <connect> zostało ustawione.
 
 cmd.squery.params=<service> [<commands>] 
 cmd.squery.help=Wysyła komendy <commands> do usługi <service>. 
@@ -742,7 +742,7 @@ msg.err.invalid.file=Zmieniono nazwę błędnego pliku z <%1$S> na <%2$S>.
 msg.err.failure=Operacja zakończona niepowodzeniem: %1$S. 
 msg.err.scriptload=Błąd podczas ładowania podskryptu z <%1$S>. 
 msg.err.pluginapi.noid=Wtyczka <%1$S> nie posiada identyfikatora.
-msg.err.pluginapi.faultyid=Wtyczka <%1$S> nie posiada prawdiłowego identyfikatora. Identyfikatory wtyczek mogą zawierać wyłącznie znaki alfanumeryczne, podkreślenia (_) i znaki minus (-).
+msg.err.pluginapi.faultyid=Wtyczka <%1$S> nie posiada prawidłowego identyfikatora. Identyfikatory wtyczek mogą zawierać wyłącznie znaki alfanumeryczne, podkreślenia (_) i znaki minus (-).
 msg.err.pluginapi.noenable=Wtyczka <%1$S> nie posiada metody enable().
 msg.err.pluginapi.nodisable=Wtyczka <%1$S> nie posiada metody disable().
 msg.err.invalid.scheme=Nieprawidłowy schemat pod adresem URL <%1$S>. 
@@ -936,7 +936,7 @@ msg.subscript.loaded=Podskrypt <%1$S> został wczytany z rezultatem „%2$S”.
 msg.user.info=Domyślny pseudonim, „%S”, nazwa użytkownika „%S”, oraz informacje dodatkowe „%S”. 
 msg.connection.info="%S: Użytkownik %S połączony poprzez %S:%S (serwer %S). 
 msg.server.info="%S: Połączono %S, ostatni ping: %S, opóźnienie serwera (lag): %S sekund. 
-msg.connect.via=Połączony porzez %S" 
+msg.connect.via=Połączony poprzez %S" 
 msg.user.mode=Tryb użytkownika %S jest obecnie %S" 
 msg.not.connected="%S: brak połączenia. 
 msg.insecure.server=Połączenie z serwerem „%S” nie jest zabezpieczone. 
@@ -1050,7 +1050,7 @@ msg.exceptlist.item="%S wykluczone %S z banów w %S na %S.
 msg.exceptlist.button=[[Usuń][Usuwa to wykluczenie banu][%S]] 
 msg.exceptlist.end=Koniec listy wykluczeń %S. 
 
-msg.channel.needops=Aby to zrobić, użytkownik musi byćoperatorem na kanale %S. 
+msg.channel.needops=Aby to zrobić, użytkownik musi być operatorem na kanale %S. 
 
 msg.ctcphelp.clientinfo=CLIENTINFO zwraca informacje o dostępnych poleceniach CTCP 
 msg.ctcphelp.action=AKCJA określa akcję wykonywaną na użytkowniku 
@@ -1375,7 +1375,7 @@ msg.install.plugin.err.download=Wystąpił błąd podczas pobierania wtyczki: %S
 msg.install.plugin.err.remove.temp=Podczas usuwania następujących plików tymczasowych wystąpił błąd: %S"
 msg.install.plugin.err.no.name=Nie udało się wybrać nazwy dla wtyczki na podstawie kodu źródłowego. Należy wprowadzić nazwę ręcznie.
 msg.install.plugin.err.protocol=Podany adres źródła korzysta z nieznanego protokołu. Jedynymi wspieranymi protokołami są 'file', 'http' oraz 'https'.
-msg.install.plugin.err.install.to=Nie udało się znaleźć odpowiedniego miejsca do instalacji (initialScripts). Należy poprawić ustawienie initialScripts, na przykład poprzez reset tego ustawienia za pomocą komendy: |/pref initialScripts - |. Ostożnie, gdyż to usunie każdą zaintalowaną gdzie indziej wtyczkę z tej listy!
+msg.install.plugin.err.install.to=Nie udało się znaleźć odpowiedniego miejsca do instalacji (initialScripts). Należy poprawić ustawienie initialScripts, na przykład poprzez reset tego ustawienia za pomocą komendy: |/pref initialScripts - |. Ostrożnie, gdyż to usunie każdą zainstalowaną gdzie indziej wtyczkę z tej listy!
 msg.install.plugin.err.check.sd=Wystąpił błąd podczas sprawdzania źródła i celu: %S"
 msg.install.plugin.err.many.initjs=Ta wtyczka rozszerzenia ChatZilla nie może zostać zainstalowana, gdyż posiada wiele plików 'init.js'.
 msg.install.plugin.err.mixed.base=Ta wtyczka rozszerzenia ChatZilla posiada ścieżkę bazową dla 'init.js' która nie jest używana dla wszystkich innych plików. Ta wtyczka prawdopodobnie nie będzie działać w takim stanie.
@@ -1497,7 +1497,7 @@ pref.awayNick.help=Ten pseudonim zostanie automatycznie użyty, gdy użytkownik 
 pref.bugKeyword.label=Słowa kluczowe dla błędów
 pref.bugKeyword.help=Istnieje możliwość ustalenia wielu słów kluczowych dla systemów zarządzania błędami za pomocą wyrażeń regularnych jak rozdzielenie ich za pomocą „|” np. błąd|bug|issue|case|ticket
 pref.bugURL.label=URL Bugzilli 
-pref.bugURL.help=Adres URL używany dla odnośnikow do błędów. „%s” jest zastępowane przez numer błędu lub alias. Tekst „bug ” z następującym po nim numerem lub znakiem „#” i słowem o długości od 1 do 20 liter zostanie przekształcony w odnośnik zawierający ten adres URL.
+pref.bugURL.help=Adres URL używany dla odnośników do błędów. „%s” jest zastępowane przez numer błędu lub alias. Tekst „bug ” z następującym po nim numerem lub znakiem „#” i słowem o długości od 1 do 20 liter zostanie przekształcony w odnośnik zawierający ten adres URL.
 pref.bugURL.comment.label=URL Bugzilli dla komentarzy
 pref.bugURL.comment.help=Adres URL lub sufiks używany do odnośników do specjalnych komentarzy z błędami (krowami, bugami). Dla pełnego adresu URL „%1$s” jest zastępowane przez numer błędu lub alias, a „%2$s” odpowiednio przez numer komentarza. Dla sufiksu „%s” jest zastępowane przez numer komentarza. Tekst „bug ” z następującym po nim numerem lub znak „#” i słowo o długości od 1 do 20 liter (alias błędu) wraz z następującym po nim „ comment ” i numerze zostanie przekształcony w odnośnik zawierający wskazany adres URL lub sufiks.
 pref.charset.label=Strona kodowa 
@@ -1545,7 +1545,7 @@ pref.identd.enabled.help=Zezwala ChatZilli na łączenie się z serwerami wymaga
 pref.initialURLs.label=Lokalizacje
 pref.initialURLs.help=Lista adresów URL (typu irc: oraz ircs:), z którymi ChatZilla powinna się połączyć w trakcie uruchamiania. Lista nie będzie przetwarzana, jeżeli ChatZilla została uruchomiona poprzez kliknięcie na odnośniku.
 pref.initialScripts.label=Pliki skryptów
-pref.initialScripts.help=Lista skryptów (adresy URL typu file:) do uruchamiania podczas startu ChatZili. Adresy URL mogą być względne do katalogu profilu użytkownika. Jeśli pozycja wskazuje na katalog, ChatZilla ładuje plik „init.js” z tego katalogu, jak i z każdego podkatalogu.
+pref.initialScripts.help=Lista skryptów (adresy URL typu file:) do uruchamiania podczas startu ChatZilli. Adresy URL mogą być względne do katalogu profilu użytkownika. Jeśli pozycja wskazuje na katalog, ChatZilla ładuje plik „init.js” z tego katalogu, jak i z każdego podkatalogu.
 pref.inputSpellcheck.label=Sprawdzaj pisownię w polu wprowadzania
 pref.inputSpellcheck.help=Określa, czy pole wprowadzania ma mieć sprawdzaną pisownię, czy nie. Działa tylko w najnowszych wersjach programu &brandShortName;.
 pref.link.focus.label=Aktywuj okno przeglądarki podczas otwierania odnośników 
@@ -1585,7 +1585,7 @@ pref.multiline.help=Określa, czy ChatZilla ma używać wieloliniowego lub jedno
 pref.munger.bold.label=Wyświetl pogrubienie 
 pref.munger.bold.help=Włącza wyświetlanie przez ChatZillę tekstu pomiędzy gwiazdkami (np. *wytłuszczony*) jako wytłuszczonego z użyciem aktualnej czcionki.
 pref.munger.bugzilla-link.label=Wyświetl odnośniki do Bugzilli 
-pref.munger.bugzilla-link.help=Włącza tworzenie przez ChatZillę odnośników hipertektowych do „bug <number>” określającego błąd z użyciem „adresu URL Bugzilli” jako odnośnika bazowego.
+pref.munger.bugzilla-link.help=Włącza tworzenie przez ChatZillę odnośników hipertekstowych do „bug <number>” określającego błąd z użyciem „adresu URL Bugzilli” jako odnośnika bazowego.
 pref.munger.channel-link.label=Wyświetl odnośniki kanałów 
 pref.munger.channel-link.help=Włącza zmianę przez ChatZillę tekstu „#kanał” w odnośnik do tego kanału.
 pref.munger.colorCodes.label=Wyświetl kolory mIRC 
@@ -1597,7 +1597,7 @@ pref.munger.face.help=Włącza wyświetlanie przez ChatZillę obrazków dla najp
 pref.munger.italic.label=Wyświetl kursywę 
 pref.munger.italic.help=Włącza wyświetlanie przez ChatZillę tekstu między slashami kursywą (np. /kursywa/).
 pref.munger.link.label=Wyświetl odnośniki 
-pref.munger.link.help=Włącza wyświetlanie przez ChatZillę tekstów, które wyglądają na adresy URL jako odnośniki hipertektowe.
+pref.munger.link.help=Włącza wyświetlanie przez ChatZillę tekstów, które wyglądają na adresy URL jako odnośniki hipertekstowe.
 pref.munger.mailto.label=Wyświetl adresy e-mail 
 pref.munger.mailto.help=Włącza wyświetlanie przez ChatZillę tekstów, które wyglądają jak adresy e-mail jako odnośniki hipertekstowe.
 pref.munger.quote.label=Wyświetl poprawione cudzysłowy 
@@ -1621,7 +1621,7 @@ pref.nickname.help=Twój pseudonim, widoczny dla uczestników rozmowy. Można wp
 pref.nicknameList.label=Lista pseudonimów 
 pref.nicknameList.help=To jest lista pseudonimów, których ChatZilla ma próbować użyć, jeżeli używany przez użytkownika jest już zajęty. Podstawowy pseudonim użytkownika nie musi być umieszczony na tej liście.
 pref.notify.aggressive.label=Zwracaj uwagę 
-pref.notify.aggressive.help=Kiedy ktoś wysyła użytkownikowi wiadomość prywatną, pisząc jego pseudonim lub używając jednego z obserwowanych słow, ChatZilla uznaje taką wiadomość za wartą uwagi użytkownika. Ta opcja określa, kiedy ChatZilla może zamigać swoim oknem lub wyświetlić je na wierzchu (zachowanie to zależy od systemu operacyjnego), aby przyciągnąć uwagę użytkownika.
+pref.notify.aggressive.help=Kiedy ktoś wysyła użytkownikowi wiadomość prywatną, pisząc jego pseudonim lub używając jednego z obserwowanych słów, ChatZilla uznaje taką wiadomość za wartą uwagi użytkownika. Ta opcja określa, kiedy ChatZilla może zamigać swoim oknem lub wyświetlić je na wierzchu (zachowanie to zależy od systemu operacyjnego), aby przyciągnąć uwagę użytkownika.
 pref.notifyList.label=Lista zawiadomień 
 pref.notifyList.help=Lista pseudonimów do okresowego sprawdzania czy są one online lub czy nie są. Co 5 minut ChatZilla sprawdzi tę listę i poinformuje, czy ktoś jest online lub przeszedł do trybu offline.
 pref.outgoing.colorCodes.label=Włącz wysyłanie kodów kolorów 
