--- a/pl/suite/chrome/common/region.properties
+++ b/pl/suite/chrome/common/region.properties
@@ -7,8 +7,8 @@ browser.search.defaultenginename=Google
 
 # Search engine order (order displayed in the search bar dropdown)
 browser.search.order.1=Google
-browser.search.order.2=DuckDuckGo
-browser.search.order.3=WP
+browser.search.order.2=Startpage
+browser.search.order.3=DuckDuckGo
 
 # More information about this update link available in the update wizard.
 # Only change this if you are providing localized release notes.
