conclude translations for DOM in Mozilla 35 cycle

--- a/de/dom/chrome/layout/css.properties
+++ b/de/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Identifikator für Extends-System erwartet, aber '%1$S'
 PECounterASWeight=Jedes Gewicht im Deskriptor für additive Symbole muss kleiner als das vorherige sein.
 PEClassSelEOF=Klassenname
 PEClassSelNotIdent=Identifikator für Klassenselektor erwartet, aber '%1$S' gefunden.
+PECoordinatePair=Koordinatenpaar erwartet, aber '%1$S' gefunden.
 PETypeSelEOF=Element-Typ
 PETypeSelNotType=Elementname oder '*' erwartet, aber '%1$S' gefunden.
 PEUnknownNamespacePrefix=Unbekanntes Namespace-Präfix '%1$S'.
