--- a/de/dom/chrome/accessibility/AccessFu.properties
+++ b/de/dom/chrome/accessibility/AccessFu.properties
@@ -157,7 +157,7 @@ statePressed     =    gedrückt
 stateExpanded    =    ausgeklappt
 stateCollapsed   =    zugeklappt
 stateUnavailable =    nicht verfügbar
-stateReadonly    =    readonly
+stateReadonly    =    schreibgeschützt
 stateRequired    =    benötigt
 stateTraversed   =    besucht
 stateHasPopup    =    hat Popup
