conclude translations for Necko in Mozilla 35 cycle

--- a/de/netwerk/necko.properties
+++ b/de/netwerk/necko.properties
@@ -37,3 +37,5 @@ PhishingAuth=Sie sind dabei, "%1$S" zu besuchen. Diese Website könnte versuchen
 PhishingAuthAccept=Ich verstehe und werde vorsichtig sein.
 SuperfluousAuth=Sie sind dabei, sich bei der Website "%1$S" mit dem Benutzernamen "%2$S" anzumelden, aber die Website benötigt keine Authentifizierung. Dies könnte ein Versuch sein, Sie zu täuschen.\n\nSoll die Website "%1$S" wirklich aufgerufen werden?
 AutomaticAuth=Sie sind dabei, sich bei der Website "%1$S" mit dem Benutzernamen "%2$S" anzumelden.
+
+TrackingUriBlocked=Die Ressource auf "%1$S" wurde blockiert, weil der Tracking-Schutz aktiviert ist.
