--- a/zh-TW/browser/chrome/browser/browser.properties
+++ b/zh-TW/browser/chrome/browser/browser.properties
@@ -610,7 +610,7 @@ customizeTips.tip0.learnMore = 詳細資訊
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
 appmenu.restartNeeded.description = 重新啟用 %S 以套用更新
-appmenu.updateFailed.description = 背景更新失敗，請下載完整更新
+appmenu.updateFailed.description = 背景更新失敗，請手動下載更新
 appmenu.restartBrowserButton.label = 重新啟動 %S
 appmenu.downloadUpdateButton.label = 下載更新
 
