--- a/zh-TW/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/zh-TW/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,8 @@ quit-button.tooltiptext.linux2 = 離開 %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = 離開 %1$S (%2$S)
 
-loop-call-button2.label = 開啟一個對話
-loop-call-button2.tooltiptext = 開啟一個對話
+loop-call-button2.label = 開始對話
+loop-call-button2.tooltiptext = 開始對話
 
 social-share-button.label = 分享此頁面
 social-share-button.tooltiptext = 分享此頁面
