Bug 1082194 - Firefox Mobile 35. r=KaiRo

--- a/de/mobile/android/chrome/browser.properties
+++ b/de/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=App
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Warten auf eingehende Verbindungen auf Port %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Debugging für %S aktivieren
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Zum Aktivieren des externen Debuggings antippen
 
 # Helper apps
 helperapps.open=Öffnen
