--- a/de/mobile/android/chrome/webapp.properties
+++ b/de/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 Update fehlgeschlagen;#1 Updates fehlgeschlagen
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Fehler beim Download des Updates für %1$S;Fehler beim Download der Updates für %1$S
 
-webappsDisabledInGuest=Das Installieren von Apps ist in Gastsitzungen deaktiviert.
+webappsDisabled=Das Installieren von Apps ist deaktiviert.
