Bug 1063933 - Firefox Desktop 34: Loop. r=KaiRo

--- a/de/browser/chrome/browser/webrtcIndicator.properties
+++ b/de/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Weitergabe-Indikator
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Zugriff auf Kamera und Mikrofon für Andere erlaubt. Klicken, um Zugriffe zu verwalten.
 webrtcIndicator.sharingCamera.tooltip              = Zugriff auf Kamera für Andere erlaubt. Klicken, um Zugriffe zu verwalten.
 webrtcIndicator.sharingMicrophone.tooltip          = Zugriff auf Mikrofon für Andere erlaubt. Klicken, um Zugriffe zu verwalten.
+webrtcIndicator.sharingApplication.tooltip = Zugriff auf eine Anwendung erlaubt. Klicken, um Zugriffe zu verwalten.
 webrtcIndicator.sharingScreen.tooltip = Zugriff auf den Bildschirm für Andere erlaubt. Klicken, um Zugriffe zu verwalten.
 webrtcIndicator.sharingWindow.tooltip = Zugriff auf ein Fenster für Andere erlaubt. Klicken, um Zugriffe zu verwalten.
 
@@ -23,14 +24,29 @@ webrtcIndicator.sharingWindow.tooltip = Zugriff auf ein Fenster für Andere erla
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = "%S" Zugriff auf Kamera erlaubt
 webrtcIndicator.sharingMicrophoneWith.menuitem = "%S" Zugriff auf Mikrofon erlaubt
+webrtcIndicator.sharingApplicationWith.menuitem = "%S" Zugriff auf Anwendung erlaubt
 webrtcIndicator.sharingScreenWith.menuitem = "%S" Zugriff auf Bildschirm erlaubt
 webrtcIndicator.sharingWindowWith.menuitem = "%S" Zugriff auf Fenster erlaubt
 webrtcIndicator.controlSharing.menuitem = Zugriffe konfigurieren
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = #1 Tab Zugriff auf Kamera erlaubt;#1 Tabs Zugriff auf Kamera erlaubt
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = #1 Tab Zugriff auf Mikrofon erlaubt;#1 Tabs Zugriff auf Mikrofon erlaubt
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = #1 Tab Zugriff auf Anwendung erlaubt;#1 Tabs Zugriff auf Anwendung erlaubt
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = #1 Tab Zugriff auf Bildschirm erlaubt;#1 Tabs Zugriff auf Bildschirm erlaubt
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = #1 Tab Zugriff auf Fenster erlaubt;#1 Tabs Zugriff auf Fenster erlaubt
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
