Bug 1085148 - Firefox Desktop 35: devtools. r=KaiRo

--- a/de/browser/chrome/browser/devtools/scratchpad.properties
+++ b/de/browser/chrome/browser/devtools/scratchpad.properties
@@ -32,6 +32,10 @@ openFile.title=Datei öffnen
 # open fails.
 openFile.failed=Datei konnte nicht gelesen werden
 
+# LOCALIZATION NOTE  (openFile.failed): This is the message displayed when file
+# open fails.
+importFromFile.convert.failed=Dateiumwandelung von %1$S in Unicode fehlgeschlagen
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Einträge entfernen
@@ -77,6 +81,11 @@ browserContext.notification=Diese JavaScript-Umgebung wird im Browser-Kontext au
 # LOCALIZATION NOTE (help.openDocumentationPage): This returns a localized link with
 # documentation for Scratchpad on MDN.
 help.openDocumentationPage=https://developer.mozilla.org/de/docs/Tools/Scratchpad
+
+# LOCALIZATION NOTE (scratchpad.statusBarLineCol): Line, Column
+# information displayed in statusbar when selection is made in
+# Scratchpad.
+scratchpad.statusBarLineCol  = Zeile %1$S, Spalte %2$S
 
 # LOCALIZATION NOTE (fileExists.notification): This is the message displayed
 # over the top of the the editor when a file does not exist.
