--- a/de/browser/chrome/browser/devtools/webide.properties
+++ b/de/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header=Manifest-Adresse eingeben
 notification_showTroubleShooting_label=Fehlerbehebung
 notification_showTroubleShooting_accesskey=F
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Wird geladen…
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=Kann Projekt nicht installieren. Nicht vollständig verbunden.
