--- a/de/browser/chrome/browser/devtools/webconsole.properties
+++ b/de/browser/chrome/browser/devtools/webconsole.properties
@@ -203,7 +203,7 @@ connectionTimeout=Verbindungs-Zeitüberschreitung. Überprüfen Sie die Fehlerko
 
 # LOCALIZATION NOTE (propertiesFilterPlaceholder): this is the text that
 # appears in the filter text box for the properties view container.
-propertiesFilterPlaceholder=Filter-Eigenschaften
+propertiesFilterPlaceholder=Eigenschaften durchsuchen
 
 # LOCALIZATION NOTE (emptyPropertiesList): the text that is displayed in the
 # properties pane when there are no properties to display.
