No bug - Add missing commas to security's nsserror.properties. r=me

--- a/de/security/manager/chrome/pipnss/nsserrors.properties
+++ b/de/security/manager/chrome/pipnss/nsserrors.properties
@@ -131,9 +131,9 @@ SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL hat eine unerwartete Handshake-Nachricht
 SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Die TLS-Gegenstelle verwendet einen nicht unterstützten Hash-Algorithmus.
 SSL_ERROR_DIGEST_FAILURE=Digest-Funktion fehlgeschlagen.
 SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Falscher Signaturalgorithmus in einem digital verschlüsselten Element angegeben.
-SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Die nächste Protokoll-Aushandlungs-Erweiterung wurde aktiviert, aber der Callback wurde entfernt bevor er gebraucht wurde.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Die nächste Protokoll-Aushandlungs-Erweiterung wurde aktiviert, aber der Callback wurde entfernt, bevor er gebraucht wurde.
 SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Der Server unterstützt keine Protokolle, die der Client in der ALPN-Erweiterung bekannt gibt.
-SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Der Server hat den Handshake abgelehnt, weil der Client auf eine niedrigere TLS-Version heruntergegangen ist als der Server unterstützt.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Der Server hat den Handshake abgelehnt, weil der Client auf eine niedrigere TLS-Version heruntergegangen ist, als der Server unterstützt.
 SEC_ERROR_IO=Ein I/O-Fehler ist während der Sicherheitsauthentifizierung aufgetreten.
 SEC_ERROR_LIBRARY_FAILURE=Sicherheitsbibliothekfehler.
 SEC_ERROR_BAD_DATA=Sicherheitsbibliothek: Fehlerhafte Daten empfangen.
