Bug 1067141 - Scratchpad Open File uses fallbackCharsetList on UTF-8 NS_ERROR_ILLEGAL_INPUT

--- a/pl/browser/chrome/browser/devtools/scratchpad.properties
+++ b/pl/browser/chrome/browser/devtools/scratchpad.properties
@@ -23,6 +23,8 @@ openFile.title=Otwórz plik
 # open fails.
 openFile.failed=Nie udało się odczytać pliku.
 
+importFromFile.convert.failed=Nie udało się skonwertować pliku z %1$S do Unicode.
+
 # LOCALIZATION NOTE (clearRecentMenuItems.label): This is the label for the
 # menuitem in the 'Open Recent'-menu which clears all recent files.
 clearRecentMenuItems.label=Wyczyść listę
