--- a/pl/browser/chrome/browser/places/places.properties
+++ b/pl/browser/chrome/browser/places/places.properties
@@ -57,10 +57,6 @@ SelectImport=Importuj plik zakładek
 EnterExport=Eksportuj plik zakładek
 
 detailsPane.noItems=Brak elementów
-# LOCALIZATION NOTE (detailsPane.itemsCountLabel): Semi-colon list of plural forms.
-# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-# #1 number of items
-# example: 111 items
 detailsPane.itemsCountLabel=Jeden element;#1 elementy;#1 elementów
 
 mostVisitedTitle=Często odwiedzane
@@ -68,7 +64,7 @@ recentlyBookmarkedTitle=Ostatnio dodane
 recentTagsTitle=Ostatnio używane etykiety
 
 OrganizerQueryHistory=Historia
-OrganizerQueryDownloads=Pobrane pliki                                               
+OrganizerQueryDownloads=Pobrane pliki
 OrganizerQueryAllBookmarks=Wszystkie zakładki
 OrganizerQueryTags=Etykiety
 
@@ -76,9 +72,8 @@ tagResultLabel=Etykieta
 bookmarkResultLabel=Zakładka
 switchtabResultLabel=Karta
 keywordResultLabel=Słowo kluczowe
+searchengineResultLabel=Wyszukiwanie
 
-# LOCALIZATION NOTE (lockPrompt.text)
-# %S will be replaced with the application name.
 lockPrompt.title=Błąd podczas uruchamiania przeglądarki
 lockPrompt.text=System zakładek i historii nie będzie działał, ponieważ jeden z plików programu %S jest używany przez inną aplikację. Niektóre programy związane z bezpieczeństwem mogą powodować ten problem.
 lockPromptInfoButton.label=Więcej informacji
