--- a/pl/dom/chrome/layout/css.properties
+++ b/pl/dom/chrome/layout/css.properties
@@ -56,6 +56,7 @@ PECounterExtendsNotIdent=Oczekiwano identyfikatora ale odnaleziono „%1$S”.
 PECounterASWeight=Każda waga w deskryptorze „additive-symbols” musi być mniejsza niż poprzednia.
 PEClassSelEOF=nazwa klasy
 PEClassSelNotIdent=Oczekiwano identyfikatora dla selektora klasy, ale odnaleziono „%1$S”.
+PECoordinatePair=Oczekiwano pary współrzędnych, ale odnaleziono „%1$S”.
 PETypeSelEOF=typ elementu
 PETypeSelNotType=Oczekiwano nazwy elementu lub „*”, ale odnaleziono „%1$S”.
 PEUnknownNamespacePrefix=Nieznany przedrostek przestrzeni nazw „%1$S”.
@@ -106,6 +107,7 @@ PEColorLightnessEOF=Jasność
 PEColorOpacityEOF=nieprzezroczystość w wartości koloru
 PEExpectedNumber=Oczekiwano liczby, ale odnaleziono „%1$S”.
 PEExpectedCloseParen=Oczekiwano „)”, ale odnaleziono „%1$S”.
+PEClipPathEOF=<prosty kształt> lub odniesienie do pudełka
 PEDeclEndEOF=„;” lub „}”, by zakończyć deklarację
 PEParseDeclarationNoColon=Oczekiwano „:”, ale odnaleziono „%1$S”.
 PEParseDeclarationDeclExpected=Oczekiwano deklaracji, ale odnaleziono „%1$S”.
