Bug 1073865 - Add missing SSL_ERROR l10n strings v1

--- a/pl/security/manager/chrome/pipnss/nsserrors.properties
+++ b/pl/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL odebrał nieprawidłowe dane rozszerzen
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Funkcja SSL nie jest obsługiwana dla połączeń SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Funkcja SSL nie jest obsługiwana dla serwerów.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Funkcja SSL nie jest obsługiwana dla klientów.
+SSL_ERROR_INVALID_VERSION_RANGE=Nieprawidłowy zakres wersji SSL.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=Druga strona komunikacji SSL wybrała niedozwolony szyfr dla wybranej wersji protokołu.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL otrzymał wadliwą wiadomość Hello Verify Request handshake.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL otrzymał nieoczekiwaną wiadomość Hello Verify Request handshake message.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=Nieobsługiwana funkcja SSL dla tej wersji protokołu.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL otrzymał nieoczekiwaną wiadomość Certificate Status handshake.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Druga strona komunikacji TLS używa nieobsługiwanego algorytmu skrótu.
+SSL_ERROR_DIGEST_FAILURE=Funkcja digest się nie powiodła.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Nieprawidłowy algorytm podpisu określony w podpisanym cyfrowo elemencie.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Rozszerzenie negocjacji następnej wersji protokołu zostało włączone, ale funckja zwrotna została wyczyszczona zanim była potrzebna.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Serwer nie obsługuje żadnego z protokołów ogłaszanych przez klienta w rozszerzeniu ALPN.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Serwer odrzucił żądanie, ponieważ klient zmienił wersję TLS na niższą niż obsługiwana przez serwer.
 SEC_ERROR_IO=Podczas autoryzacji bezpieczeństwa wystąpił błąd wejścia/wyjścia.
 SEC_ERROR_LIBRARY_FAILURE=błąd biblioteki bezpieczeństwa.
 SEC_ERROR_BAD_DATA=biblioteka bezpieczeństwa: otrzymano niewłaściwe dane.
