Bug 1031019 - add Apps toolbar button that points to Marketplace

--- a/pl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -53,3 +53,5 @@ loop-call-button.label=Zaproś kogoś do rozmowy
 loop-call-button.tooltiptext=Zaproś kogoś do rozmowy
 panic-button.label=Wyczyść
 panic-button.tooltiptext=Wyczyść ostatnią historię przeglądania
+web-apps-button.label=Aplikacje
+web-apps-button.tooltiptext=Odkrywaj aplikacje
