Bug 1070957 - Show deprecation notice in App Manager

--- a/pl/browser/chrome/browser/devtools/app-manager.properties
+++ b/pl/browser/chrome/browser/devtools/app-manager.properties
@@ -2,6 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+index.deprecationNotice=Menedżer aplikacji zostanie w przyszłości usunięty. Istniejące projekty zostały przeniesione do WebIDE.
+index.launchWebIDE=Otwórz WebIDE
+index.readMoreAboutWebIDE=Więcej informacji
+
 device.deviceSize=Ekran urządzenia: %1$S×%2$S (%3$S DPI)
 connection.connectedToDevice=Połączono z %1$S
 connection.connectTo=Połącz z %1$S:%2$S
