--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -124,3 +124,6 @@ feedback_back_button=Wstecz
 feedback_window_will_close_in2=Okno zostanie zamknięte za sekundę;Okno zostanie zamknięte za {{countdown}} sekundy;Okno zostanie zamknięte za {{countdown}} sekund
 feedback_rejoin_button=Połącz ponownie
 feedback_report_user_button=Zgłoś użytkownika
+
+rooms_list_current_conversations=Aktywna rozmowa;Aktywne rozmowy;Aktywne rozmowy
+rooms_list_no_current_conversations=Brak aktywnych rozmów
