--- a/pl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -49,8 +49,8 @@ email-link-button.label=Wyślij odnośnik
 email-link-button.tooltiptext3=Wyślij odnośnik do tej strony
 quit-button.tooltiptext.linux2=Zakończ program %1$S (%2$S)
 quit-button.tooltiptext.mac=Zakończ program %1$S (%2$S)
-loop-call-button.label=Zaproś kogoś do rozmowy
-loop-call-button.tooltiptext=Zaproś kogoś do rozmowy
+loop-call-button2.label=Rozpocznij rozmowę
+loop-call-button2.tooltiptext=Rozpocznij rozmowę
 panic-button.label=Wyczyść
 panic-button.tooltiptext=Wyczyść ostatnią historię przeglądania
 web-apps-button.label=Aplikacje
