--- a/pl/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pl/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -51,6 +51,8 @@ quit-button.tooltiptext.linux2=Zakończ program %1$S (%2$S)
 quit-button.tooltiptext.mac=Zakończ program %1$S (%2$S)
 loop-call-button2.label=Rozpocznij rozmowę
 loop-call-button2.tooltiptext=Rozpocznij rozmowę
+social-share-button.label=Udostępnij tę stronę
+social-share-button.tooltiptext=Udostępnij tę stronę
 panic-button.label=Wyczyść
 panic-button.tooltiptext=Wyczyść ostatnią historię przeglądania
 web-apps-button.label=Aplikacje
