Bug 1080013 - string change for bug 1050501

--- a/pl/browser/chrome/browser/devtools/timeline.properties
+++ b/pl/browser/chrome/browser/devtools/timeline.properties
@@ -11,3 +11,4 @@ timeline.records=Zdarzenia
 timeline.label.styles=Styl
 timeline.label.reflow=Reflow
 timeline.label.paint=Malowanie
+timeline.label.domevent=Zdarzenie DOM
