Bug 1081322 - Add a phone number field to the New/ Edit Contact view

--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -48,6 +48,7 @@ contacts_search_placesholder=Szukaj…
 new_contact_button=Nowy kontakt
 new_contact_name_placeholder=Nazwa
 new_contact_email_placeholder=E-mail
+new_contact_phone_placeholder=Telefon z Firefox OS
 contacts_blocked_contacts=Zablokowane kontakty
 add_contact_button=Dodaj kontakt
 valid_email_text_description=Proszę wprowadzić prawidłowy adres e-mail
