--- a/pl/toolkit/chrome/global/resetProfile.properties
+++ b/pl/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,5 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Wygląda na to, że przeglądarka %S nie była włączana od jakiegoś czasu. Chcesz ją wyczyścić, żeby śmigała jak nowa? No i witaj z powrotem!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Resetuj przeglądarkę %S…
-resetProfile.resetButton.accesskey=e
+refreshProfile.resetButton.label=Odśwież program %S…
+refreshProfile.resetButton.accesskey=O
