--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -511,3 +511,8 @@ slowStartup.disableNotificationButton.accesskey = N
 customizeTips.tip0.hint=Podpowiedź
 customizeTips.tip0=%1$S: Program %2$S można dostosować do własnych potrzeb. Wystarczy przeciągnąć przycisk do menu lub paska narzędzi. %3$S nt. dostosowywania programu %2$S.
 customizeTips.tip0.learnMore=Dowiedz się więcej
+
+appmenu.restartNeeded.description=Uruchom ponownie program %S, aby go uaktualnić
+appmenu.updateFailed.description=Aktualizacja w tle nie powiodła się, proszę pobrać uaktualnienie
+appmenu.restartBrowserButton.label=Uruchom ponownie %S
+appmenu.downloadUpdateButton.label=Pobierz aktualizację
