updated latvian translation

--- a/lv/dom/chrome/security/security.properties
+++ b/lv/dom/chrome/security/security.properties
@@ -11,4 +11,5 @@ InsecureFormActionPasswordsPresent=Paroles lauks formā ar nedrošu apstrādes a
 InsecurePasswordsPresentOnIframe=Paroles lauks nedrošā iframe (http://). Šis ir drošības risks, kas var novest pie lietotāja datu zādzības.
 LoadingMixedActiveContent=Tiek ielādēts jaukts (nedrošs) aktīvais saturs drošā lapā "%1$S"
 LoadingMixedDisplayContent=Tiek ielādēts jaukts (nedrošs) attēlojamais saturs drošā lapā "%1$S"
-
+InvalidPKPHeaders=Lapa norādīja nepareizu Public-Key-Pins galveni.
+BothAllowScriptsAndSameOriginPresent=iframe ar abiem allow-scripts un allow-same-origin kā tās sandbox atribūtiem var aizvākt sandbox.
