--- a/lv/mobile/android/chrome/browser.properties
+++ b/lv/mobile/android/chrome/browser.properties
@@ -221,6 +221,9 @@ deviceStorageSdcard.ask=Atļaut %S piekļuvi jūsu krātuvei?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 deviceStorageSdcard.dontAskAgain=Vairāk nejautāt šajā lapā
 
+remoteStartNotificationTitle=Aktivēt atkļūdošanu %S
+remoteStartNotificationMessage=Pieskatieties, lai aktivizētu attālināto atkļūdošanu
+
 deviceStorageVideos.allow=Atļaut
 deviceStorageVideos.dontAllow=Neatļaut
 deviceStorageVideos.ask=Atļaut %S piekļuvi jūsu video?
