--- a/lv/mobile/android/chrome/handling.properties
+++ b/lv/mobile/android/chrome/handling.properties
@@ -5,3 +5,4 @@
 protocol.failed=Neizdevās atrast lietotni šīs saites atvēršanai
 # A very short string shown in the button toast when no application can open the url
 protocol.toast.search=Meklēt
+download.blocked=Neizdevās lejupielādēt failu
