--- a/lv/mobile/android/chrome/webapp.properties
+++ b/lv/mobile/android/chrome/webapp.properties
@@ -52,4 +52,4 @@ retrievalFailedTitle=#1 lejupielāžu neizdevās;#1 lejupielāde neizdevās;#1 l
 # example: Failed to download Foo, Bar, Baz.
 retrievalFailedMessage=Neizdevās lejupielādēt %1$S;Neizdevās lejupielādēt %1$S;Neizdevās lejupielādēt %1$S
 
-webappsDisabledInGuest=Instalēšana nav atļauta viesa sesijas laikā
+webappsDisabled=Instalēšana nav atļauta
