--- a/es-CL/netwerk/necko.properties
+++ b/es-CL/netwerk/necko.properties
@@ -13,7 +13,7 @@
 5=Enviando petición a %1$S…
 6=Transfiriendo datos desde %1$S…
 7=Conectando a %1$S…
-8=Leido %1$S 
+8=Leído %1$S 
 9=Escrito %1$S
 10=Esperando a %1$S…
 11=Encontrado %1$S…
