Bug 1034114 - Defer remote debugger initialization via notification;  Bug 1058150 - Use restricted profiles for guest mode.

--- a/pl/mobile/android/chrome/browser.properties
+++ b/pl/mobile/android/chrome/browser.properties
@@ -297,6 +297,8 @@ remoteNotificationGenericName=Aplikacja
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Nasłuchiwanie na porcie %S
+remoteStartNotificationTitle=Włącz debugowanie aplikacji %S
+remoteStartNotificationMessage=Stuknij, by włączyć debugowanie
 
 # Helper apps
 helperapps.open=Otwórz
