--- a/pl/mobile/android/chrome/webapp.properties
+++ b/pl/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=#1 próba pobierania nie powiodła się;#1 próby pobierani
 # example: 3 updates failed
 retrievalFailedMessage=Nie udało się pobrać aktualizacji dla: %S;Nie udało się pobrać aktualizacji dla: %S;Nie udało się pobrać aktualizacji dla: %S
 
-webappsDisabledInGuest=Instalacja aplikacji jest niemożliwa w sesjach gościnnych
+webappsDisabled=Instalacja aplikacji jest wyłączona
