--- a/ga-IE/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/ga-IE/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -55,7 +55,7 @@ snapshotsList.loadedLabel=Luchtaithe ón diosca
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogTitle):
 # This string is displayed as a title for saving a snapshot to disk.
-snapshotsList.saveDialogTitle=Save animation frame snapshot…
+snapshotsList.saveDialogTitle=Sábháil fráma amháin den bheochan…
 
 # LOCALIZATION NOTE (snapshotsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a snapshot to disk.
