--- a/ga-IE/browser/chrome/browser/devtools/gclicommands.properties
+++ b/ga-IE/browser/chrome/browser/devtools/gclicommands.properties
@@ -1113,12 +1113,12 @@ jsbIndentSizeManual=The number of chars with which to indent each line
 # LOCALIZATION NOTE (jsbIndentCharDesc) A very short description of the
 # 'jsb <indentChar>' parameter. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-jsbIndentCharDesc=The chars used to indent each line
+jsbIndentCharDesc=Na carachtair le húsáid san eangú
 
 # LOCALIZATION NOTE (jsbIndentCharManual) A fuller description of the
 # 'jsb <indentChar>' parameter, displayed when the user asks for help on what it
 # does.
-jsbIndentCharManual=The chars used to indent each line. The possible choices are space or tab.
+jsbIndentCharManual=Na carachtair le húsáid san eangú. Is gá spás nó táb a roghnú.
 
 # the 'jsb <doNotPreserveNewlines>' parameter. This string is designed to be
 # shown in a menu alongside the command name, which is why it should be as short
@@ -1512,9 +1512,9 @@ injectFailed=Níorbh fhéidir %1$S a luchtú - URI neamhbhailí
 # folderOpenProfileDesc) These strings describe the 'folder' commands and
 # all available parameters.
 folderDesc=Oscail fillteáin
-folderOpenDesc=Open folder path
-folderOpenDir=Directory Path
-folderOpenProfileDesc=Open profile directory
+folderOpenDesc=Oscail conair fhillteáin
+folderOpenDir=Conair na Comhadlainne
+folderOpenProfileDesc=Oscail comhadlann na próifíle
 
 # LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
 # of the 'folder open' command with an invalid folder path.
