--- a/ga-IE/browser/chrome/browser/devtools/shadereditor.properties
+++ b/ga-IE/browser/chrome/browser/devtools/shadereditor.properties
@@ -33,4 +33,4 @@ shadersList.programLabel=Clár %S
 # This string is displayed in the programs list of the Shader Editor, while
 # the user hovers over the checkbox used to toggle blackboxing of a program's
 # associated fragment shader.
-shadersList.blackboxLabel=Toggle geometry visibility
+shadersList.blackboxLabel=Scoránaigh infheictheacht na geoiméadrachta
