--- a/ga-IE/browser/chrome/browser/devtools/storage.properties
+++ b/ga-IE/browser/chrome/browser/devtools/storage.properties
@@ -44,7 +44,7 @@ tree.emptyText=Níl aon óstríomhairí ar an leathanach
 # LOCALIZATION NOTE (table.emptyText):
 # This string is displayed when there are no rows in the Storage Table for the
 # selected host.
-table.emptyText=No data present for selected host
+table.emptyText=Níl aon sonraí ar fáil le haghaidh an óstríomhaire seo
 
 # LOCALIZATION NOTE (tree.labels.*):
 # These strings are the labels for Storage type groups present in the Storage
