--- a/ga-IE/browser/chrome/browser/devtools/timeline.properties
+++ b/ga-IE/browser/chrome/browser/devtools/timeline.properties
@@ -17,12 +17,12 @@ timeline.label=Amlíne
 
 # LOCALIZATION NOTE (timeline.panelLabel):
 # This is used as the label for the toolbox panel.
-timeline.panelLabel=Timeline Panel
+timeline.panelLabel=Painéal na hAmlíne
 
 # LOCALIZATION NOTE (timeline.tooltip):
 # This string is displayed in the tooltip of the tab when the timeline is
 # displayed inside the developer tools window.
-timeline.tooltip=Performance Timeline
+timeline.tooltip=Amlíne Fheidhmíochta
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
