--- a/ga-IE/browser/chrome/browser/devtools/webconsole.properties
+++ b/ga-IE/browser/chrome/browser/devtools/webconsole.properties
@@ -169,7 +169,7 @@ ToolboxTabWebconsole.label=Consól
 
 # LOCALIZATION NOTE (ToolboxWebConsole.panelLabel): the string used as the
 # label for the toolbox panel.
-ToolboxWebConsole.panelLabel=Console Panel
+ToolboxWebConsole.panelLabel=Painéal Consóil
 
 # LOCALIZATION NOTE (ToolboxWebconsole.tooltip): the string displayed in the
 # tooltip of the tab when the Web Console is displayed inside the developer
@@ -199,7 +199,7 @@ NetworkPanel.fetchRemainingRequestContentLink=Faigh corp an iarratais (%S beart)
 
 # LOCALIZATION NOTE (connectionTimeout): message displayed when the Remote Web
 # Console fails to connect to the server due to a timeout.
-connectionTimeout=Connection timeout. Check the Error Console on both ends for potential error messages. Reopen the Web Console to try again.
+connectionTimeout=Ceangal thar am. Téigh ar lorg teachtaireachtaí earráide sna Consóil Earráide ar an dá thaobh. Athoscail an Consól Gréasáin chun triail eile a bhaint as.
 
 # LOCALIZATION NOTE (propertiesFilterPlaceholder): this is the text that
 # appears in the filter text box for the properties view container.
@@ -235,7 +235,7 @@ selfxss.msg=Scam Warning: Take care when pasting things you don't understand. Th
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
 # Please avoid using non-keyboard characters here
-selfxss.okstring=allow pasting
+selfxss.okstring=ceadaigh greamú
 
 # LOCALIZATION NOTE (messageToggleDetails): the text that is displayed when
 # you hover the arrow for expanding/collapsing the message details. For
@@ -254,6 +254,6 @@ emptySlotLabel=#1 sliotán folamh;#1 shliotán folamh;#1 shliotán folamh;#1 sli
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
 table.index=(innéacs)
-table.iterationIndex=(iteration index)
+table.iterationIndex=(innéacs atriallta)
 table.key=Eochair
 table.value=Luachanna
