--- a/ga-IE/browser/chrome/browser/devtools/webide.properties
+++ b/ga-IE/browser/chrome/browser/devtools/webide.properties
@@ -5,14 +5,14 @@
 title_noApp=Firefox WebIDE
 title_app=Firefox WebIDE: %S
 
-runtimeButton_label=Select Runtime
+runtimeButton_label=Roghnaigh Córas Ama Rite
 projectButton_label=Oscail Aip
 
 mainProcess_label=Príomhphróiseas
 
-local_runtime=Local Runtime
-remote_runtime=Remote Runtime
-remote_runtime_promptTitle=Remote Runtime
+local_runtime=Córas Ama Rite Áitiúil
+remote_runtime=Córas Ama Rite i gCéin
+remote_runtime_promptTitle=Córas Ama Rite i gCéin
 remote_runtime_promptMessage=óstainm:port
 
 importPackagedApp_title=Roghnaigh Comhadlann
