--- a/ga-IE/browser/chrome/browser/downloads/downloads.properties
+++ b/ga-IE/browser/chrome/browser/downloads/downloads.properties
@@ -59,9 +59,9 @@ blockedUncommon=Seans go mbeadh sé contúirteach an comhad seo a oscailt.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 unblockHeader=An bhfuil tú cinnte gur mhaith leat an cosc a bhaint den chomhad seo?
 unblockTypeMalware=Tá víreas nó bogearraí mailíseacha a dhéanfadh dochar do do ríomhaire sa chomhad seo.
-unblockTypePotentiallyUnwanted=This file, disguised as a helpful download, will make unexpected changes to your programs and settings.
-unblockTypeUncommon=This file has been downloaded from an unfamiliar and potentially dangerous website and may not be safe to open.
-unblockTip=You can search for an alternate download source or try to download the file again later.
+unblockTypePotentiallyUnwanted=Tá an comhad seo ag ligean air gur íosluchtú cabhrach é, ach athróidh sé do chóras ar bhealach gan súil leis.
+unblockTypeUncommon=Íosluchtaíodh an comhad seo ó shuíomh neamhaithnid a d'fhéadfadh a bheith contúirteach, agus seans go ndéanfadh sé dochar do do ríomhaire.
+unblockTip=Tig leat an comhad a lorg ar shuíomh eile, nó iarracht a dhéanamh an comhad a íosluchtú arís ar ball.
 unblockButtonContinue=Bain an cosc de mar sin féin
 unblockButtonCancel=Coinnigh slán ó thubaiste mé
 
