--- a/ga-IE/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ga-IE/browser/chrome/browser/devtools/scratchpad.properties
@@ -97,7 +97,7 @@ propertiesFilterPlaceholder=Scag airíonna
 
 # LOCALIZATION NOTE (connectionTimeout): message displayed when the Remote Scratchpad
 # fails to connect to the server due to a timeout.
-connectionTimeout=Connection timeout. Check the Error Console on both ends for potential error messages. Reopen the Scratchpad to try again.
+connectionTimeout=Ceangal thar am. Téigh ar lorg teachtaireachtaí earráide sna Consóil Earráide ar an dá thaobh. Athoscail an Ceap Breacaireachta chun triail eile a bhaint as.
 
 # LOCALIZATION NOTE (scratchpad.label): this string is displayed in the title of
 # the tab when the Scratchpad is displayed inside the developer tools window and
@@ -121,4 +121,4 @@ selfxss.msg=Scam Warning: Take care when pasting things you don't understand. Th
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
 # Please avoid using non-keyboard characters here
-selfxss.okstring=allow pasting
+selfxss.okstring=ceadaigh greamú
