--- a/ga-IE/browser/chrome/browser/loop/loop.properties
+++ b/ga-IE/browser/chrome/browser/loop/loop.properties
@@ -46,7 +46,7 @@ display_name_available_status=Ar Fáil
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-unable_retrieve_url=Sorry, we were unable to retrieve a call url.
+unable_retrieve_url=Níorbh fhéidir URL an ghlao a fháil.
 session_expired_error_description=Session expired. All URLs you have previously created and shared will no longer work.
 could_not_authenticate=Níorbh Fhéidir Fíordheimhniú
 password_changed_question=Ar athraigh tú d'fhocal faire?
