--- a/es-CL/dom/chrome/layout/css.properties
+++ b/es-CL/dom/chrome/layout/css.properties
@@ -105,6 +105,9 @@ PEColorSaturationEOF = saturación
 PEColorLightnessEOF = luminosidad
 PEColorOpacityEOF = opacidad en valor de color
 PEExpectedNumber = Se esperaba un numero, pero se encontró '%1$S'.
+PEPositionEOF=<posición>
+PEExpectedPosition=Se esperaba <posición>, pero se encontró '%1$S'.
+PEExpectedRadius=Se esperaba radio, pero se encontró '%1$S'.
 PEExpectedCloseParen = Se esperaba un ')', pero se encontró '%1$S'.
 PEDeclEndEOF = ';' o '}' para finalizar declaración
 PEParseDeclarationNoColon = Se esperaba un ':', pero se encontró '%1$S'.
