--- a/es-CL/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/es-CL/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -71,8 +71,8 @@ email-link-button.label = Enviar enlace
 quit-button.tooltiptext.linux2 = Salir de %1$S (%2$S)
 quit-button.tooltiptext.mac = Salir de %1$S (%2$S)
 
-loop-call-button2.label = Iniciar una conversación
-loop-call-button2.tooltiptext = Iniciar una conversación
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Iniciar una conversación
 
 social-share-button.label = Compartir esta página
 social-share-button.tooltiptext = Compartir esta página
