--- a/es-CL/security/manager/chrome/pipnss/nsserrors.properties
+++ b/es-CL/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=El certificado fue firmado uando un 
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=El servidor usa colocado de clave (HPKP) pero no se pudo construir una cadena de certificado confiable que coincida con la clave. Las violaciones de colocación de clave no pueden ser ignoradas.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=El servidor usa un certificado con una restricción de extensión básica identificándolo a él como una autoridad certificada. Para un certificado correctamente emitido, este no debiera ser el caso.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=El servidor presentó un certificado con un tamaño de clave que es muy pequeño para establecer una conexión segura.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Un certificado X.509 versión 1 que no es un ancla de confianza fue usado para emitir el certificado del servidor. Los certificados X.509 versión 1 están obsoletos y no debieran ser usados para firmar otros certificado.
